[gd_scene load_steps=11 format=3 uid="uid://settings_menu_scene"]

[ext_resource type="Script" path="res://Scripts/UI/SettingsMenu.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/backgrounds/menus/menu_settings.jpg" id="2"]
[ext_resource type="Texture2D" path="res://assets/ui/toggle_off.jpg" id="3"]
[ext_resource type="Texture2D" path="res://assets/ui/toggle_on.jpg" id="4"]
[ext_resource type="FontFile" path="res://assets/fonts/PressStart2P-Regular.ttf" id="5"]

[sub_resource type="Gradient" id="Gradient_1"]
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1"]
gradient = SubResource("Gradient_1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1"]
direction = Vector3(0, -1, 0)
initial_velocity_min = 15.0
initial_velocity_max = 30.0
gravity = Vector3(0, -30, 0)
scale_min = 0.3
scale_max = 0.8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.15, 0.15, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id="Animation_1"]
resource_name = "GlowPulse"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/HBox_SFX/ToggleButton_SFX:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.6, 0.9, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/HBox_Music/ToggleButton_Music:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.6, 0.9, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1"]
_data = {
"GlowPulse": SubResource("Animation_1"),
"TogglePulse": SubResource("Animation_2")
}

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 5

[node name="Particles" type="Particles2D" parent="."]
position = Vector2(960, 1080)
emitting = true
amount = 30
lifetime = 8.0
texture = SubResource("GradientTexture1D_1")
emission_shape = 1
emission_sphere_radius = 1920.0
gravity = Vector2(0, -30)
process_material = SubResource("ParticleProcessMaterial_1")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.45)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="HBox_SFX" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 40
alignment = 1

[node name="Label_SFX" type="Label" parent="VBoxContainer/HBox_SFX"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 1, 1, 1)
theme_override_constants/outline_size = 4
text = "SOUND EFFECTS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer_SFX" type="Control" parent="VBoxContainer/HBox_SFX"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ToggleButton_SFX" type="TextureButton" parent="VBoxContainer/HBox_SFX"]
layout_mode = 2
custom_minimum_size = Vector2(160, 64)
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("3")
texture_pressed = ExtResource("4")
expand_mode = 1
stretch_mode = 4
modulate = Color(1, 1, 1, 1)
focus_mode = 2

[node name="HBox_Music" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 40
alignment = 1

[node name="Label_Music" type="Label" parent="VBoxContainer/HBox_Music"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 1, 1, 1)
theme_override_constants/outline_size = 4
text = "MUSIC"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer_Music" type="Control" parent="VBoxContainer/HBox_Music"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ToggleButton_Music" type="TextureButton" parent="VBoxContainer/HBox_Music"]
layout_mode = 2
custom_minimum_size = Vector2(160, 64)
toggle_mode = true
button_pressed = false
texture_normal = ExtResource("3")
texture_pressed = ExtResource("4")
expand_mode = 1
stretch_mode = 4
modulate = Color(0.6, 0.6, 0.6, 1)
focus_mode = 2

[node name="BackButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(420, 90)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2")
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 30
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 1, 1, 1)
theme_override_constants/outline_size = 4
text = "BACK"
flat = false

[node name="ToggleFX" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1")
}
autoplay = "GlowPulse"

